# Signals

./: .gitignore  MANIFEST.in  README.md  RNBO_INTEGRATION_REPORT.md  demo_phase2.py  main.py  patch_build_rs.py  patch_rnbo_bridge_cpp.py  patch_rnbo_bridge_h.py  patch_rnbo_module.py  patch_rnbo_tests.py  plan.md  pyproject.toml  pytest.ini  render_patch.py  setup.py
RNBO_Integration/: RNBO_DESIGN.md  RNBO_INTEGRATION_REPORT.md  RNBO_Test_Patch.maxpat  analogosc.cpp.h  description.json
docs/: RNBO_INTEGRATION_REPORT.md  RUST_RNBO_EXECUTION.md
docs/architecture/: signal_store_design.md
examples/: filter_demo.py  lfo_demo.py  logging_examples.py
examples/patches/: basic_synth.yaml  multi_osc_synth.yaml
examples/templates/: parametric_synth.yaml
python/: main.py  pyproject.toml  render_patch.py  setup.py
python/examples/: demo_rnbo.py  demo_rust_osc.py  lfo_demo.py  logging_examples.py
python/examples/patches/: basic_synth.yaml  enhanced_envelope_test.yaml  filter_demo.yaml  lfo_complex_demo.yaml  lfo_tremolo_demo.yaml  multi_auto_envelope.yaml  new_envelope_spec.yaml
python/examples/templates/: flexible_envelope.yaml  parametric_synth.yaml
python/scripts/: demo_context_dsp.py  demo_logging.py  demo_phase2.py  test_envelope_clicks.py
python/scripts/node_editor/: index.html  node_editor.js  server.py
python/src/signals/: cli.py
python/tests/: README.md  conftest.py  test_basic.py  test_filter_integration.py  test_lfo.py  test_modules.py  test_rnbo_oscillator.py  test_rust_oscillator.py
rust/: Cargo.toml  build.rs
rust/rnbo_analog_rust/: Cargo.toml
rust/rnbo_analog_rust/src/: lib.rs
rust/src/: graph.rs  lib.rs  main.rs  module.rs  rnbo_bridge.cpp  rnbo_bridge.h  rnbo_module.rs  signal_store.rs
rust/tests/: core_tests.rs  rnbo_tests.rs
scripts/: analyze_click_cause.py  debug_complex_patch.py  debug_graph_detailed.py  debug_module_performance.py  demo_context_dsp.py  demo_context_usage.py  demo_logging.py  demo_phase2_guided.py  run_envelope_monitoring.py  test_envelope_clicks.py  test_improved_envelope.py  tutorial_phase2.py
scripts/node_editor/: server.py
signals/: __init__.py  dsp.py  envelope.py  mixer.py  module.py  oscillator.py  output.py
src/signals/: __init__.py  dsp.py  engine.py  envelope.py  graph.py  mixer.py  module.py  oscillator.py  output.py  patch.py  rnbo_osc.cpp
src/signals/core/: __init__.py  context.py  dsp.py  dsp_context.py  logging.py  module.py  store.py
src/signals/modules/: __init__.py  (+8 more)
tests/: conftest.py  test_basic.py  test_context.py  test_debugging.py  test_engine.py  test_envelope_comprehensive.py  test_envelope_monitoring.py  test_filter_integration.py  test_lfo.py  test_lfo_integration.py  test_modules.py  test_performance.py  test_phase2.py
(+13 files in other folders)
