[package]
name = "signals_core"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx = "1.0.194"
rnbo_analog_rust = { path = "rnbo_analog_rust" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
hound = "3.5"
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
cxx-build = "1.0.194"

[workspace]
members = [
    ".",
    "rnbo_analog_rust"
]
